css/main-style.css
:root {
    --dark-first-color: #03045E;
    --dark-second-color: #023E8A;
    /*--dark-third-color: #0077B6;*/
    --middle-first-color: #0096C7;
    --middle-second-color: #00B4D8;
    --middle-third-color: #48CAE4;
    /*--ligth-first-color: #90E0EF;*/
    --ligth-second-color: #ADE8F4;
    --ligth-third-color: #CAF0F8;
    --text-is-black-primary-color: white;
    --text-is-black-secondary-color: black;
}
  

html {
    width: 100%;
    height: 100%;
    background-color: var(--ligth-third-color);
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin: 0px;
    background-image: linear-gradient(var(--dark-first-color), var(--ligth-third-color));
}

h1 {
    text-align: center;
    color: var(--text-is-black-primary-color);
}

p {
    margin: 0px;
    padding: 2px;
}

span {
    display: table;
    margin: 0 auto;
}

path {
    pointer-events: none;
    transform: scale(0.3);
}

#username-input {
    display: block;
    resize:both;
    overflow: hidden;
    width: 80%;
}

.top-span {
    background-color: var(--dark-first-color);
    color: var(--text-is-black-primary-color);
    border-style: solid;
    border-color: black;
    border-width: 4px 4px 0px 4px;
    border-radius: 5px 5px 0px 0px;
}

.memorize-main-game-block {
    padding: 0px;
    display: flex;
    width: fit-content;
    align-items: flex-start;
}

.game-configurations {
    width: fit-content;
}

.config-block {
    border-style: none;
    border-radius: 5px;
    padding: 10px;
    width: inherit;
    max-width: 318px;
}

.config-form {
    background-color: var(--middle-first-color);
    border-style: solid;
    border-color: black;
    border-width: 4px;
    border-radius: 0px 0px 5px 5px;
    padding: 10px;

    height: max-content;
}

.game-section {
    width: fit-content;
    height: fit-content;
    padding: 10px 0px 0px 0px;
    border-radius: 10px;
}

.main-game-top-bar {
    background-color: var(--dark-first-color);
    color: var(--text-is-black-primary-color);
    border-style: solid;
    border-color: black;
    border-width: 4px 4px 0px 4px;
    border-radius: 5px 5px 0px 0px;
    padding: 10px;
    display: flex;
    justify-content: space-between;
}

.main-game-section {
    background-image: linear-gradient(var(--middle-second-color), var(--ligth-second-color));
    border-style: solid;
    border-color: black;
    border-width: 4px;
    border-radius: 0px 0px 5px 5px;
    padding: 1px;
    
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;

    width: fit-content;
    max-width: 600px;
}

.game-cards-block {
    border-width: 2px;
    border-radius: 5px;
    margin: 2px;
    padding: 10px;
}

.card {
    background-color: var(--ligth-third-color);
    border-style: solid;
    border-color: black;
    border-width: 2px;
    border-radius: 5px;
    margin: 1px;

    width: 55px;
    height: 80px;

    display: flex;
    justify-content: center;
    align-items: center;
    
    transition: all .5s cubic-bezier(0.42, 0.5, 0.15, 1.2);
}

.card-click {
    transform: rotate(180deg);
}

.card-delete {
    background-color: var(--ligth-third-color);
    border-style: solid;
    border-color: black;
    border-width: 2px;
    border-radius: 5px;
    margin: 1px;

    width: 55px;
    height: 80px;

    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0.2;

    transform: rotate(0deg);
    transition: all .5s ease-in-out;
}

.card:hover {
    border-color: rgb(210, 44, 44);
    background-color: var(--ligth-second-color);
    cursor: pointer;
}

.svg-hide-card {
    display: none;
    border-radius: 3px;
    pointer-events: none;
    width: 100%;
    height: 100%;
}

.svg-hide-card::after {
    background-color: attr(data-randomColor);
}

.svg-show-card {
    display: block;
    border-radius: 3px;
    cursor: default;
    pointer-events: none;
    width: 100%;
    height: 100%;
}

.svg-show-card:after {
    background-color: attr(data-randomColor);
}

.scoreboard-aside {
    width: fit-content;
}

.scoreboard-block {
    border-style: none;
    border-radius: 5px;
    padding: 10px;
    width: inherit;
}

.scoreboard-block span {
    justify-content: center;
}

.scoreboard-table {
    background-color: var(--middle-first-color);
    border-style: solid;
    border-color: black;
    border-width: 4px;
    border-radius: 0px 0px 5px 5px;
    padding: 10px;

    display: flex;
    justify-content: center;
    align-items: center;
}

.select-scoreboard-filter {
    background-color: var(--middle-first-color);
    border-style: solid;
    border-color: black;
    border-width: 4px;
    border-radius: 0px 0px 5px 5px;

    padding: 10px;
    margin: 0px 0px 5px 0px;

    display: flex;
    justify-content: space-around;
}

.scoreboard-filters-buttons {
    width: 100%;
    
    display: flex;
    justify-content: space-evenly;
}

.scoreboard-filters-ddl {
    width: 100%;
    
    display: flex;
    justify-content: center;
}

.scoreboard-table p {
    border-style: solid;
    border-color: black;
    border-width: 2px;
    border-radius: 5px;
    padding: 10px;
    margin: 0px;

    display: flex;
    justify-content: center;
    align-items: center;
}

.scoreboard-table-top {
    background-color: var(--dark-first-color);
    color: var(--text-is-black-primary-color);
}

.scoreboard-table-data {
    background-color: var(--ligth-third-color);
    color: black;
}

.button-scoreboard-filter {
    background-color: var(--dark-second-color);
    border-radius: 5px;
    border-width: 2px;
    border-style: solid;
    border-color: black;
    color: var(--text-is-black-primary-color);
    padding: 2px 6px 2px 6px;
    cursor: pointer;
}

.button-scoreboard-filter:hover {
    background-color: var(--middle-second-color);
    border-color: #023E8A;
    color: var(--text-is-black-secondary-color);
}

.button-selected {
    background-color: var(--ligth-third-color);
    border-color: #023E8A;
    color: black;

    border-radius: 5px;
    border-width: 2px;
    border-style: solid;
    padding: 2px 6px 2px 6px;
    cursor: pointer;
}

.button-div-start-game {
    margin: 5px 0px 0px 0px;
}

.dropdown-select {
    background-color: var(--dark-second-color);
    color: var(--text-is-black-primary-color);
    border-color: black;

    border-radius: 5px;
    border-width: 2px;
    border-style: solid;

    cursor: pointer;
}

/* Responsive layout */

@media screen and (max-width: 900px) {
    .game-configurations {
        background-image: none;
        background-color: var(--middle-third-color);
        display: flex;
        width: 100%;
        height: 100%;
        justify-content: space-evenly;
        border-width: 0px;
        border-radius: 10px 10px 0px 0px;
        margin: 0px;
        padding: 0px;
    }
    .game-section {
        background-color: var(--middle-third-color);
        border-radius: 0px;
        width: 100%;
    }
    .memorize-main-game-block {
        border-style: solid;
        border-color: black;
        border-radius: 15px;
        flex-direction: column;
        align-items: center;
    }
    .scoreboard-aside {
        background-image: none;
        background-color: var(--middle-third-color);
        margin: 0px;
        border-width: 0px;
        border-radius: 0px 0px 10px 10px;
        padding: 0px;

        display: flex;
        width: 100%;
        justify-content: center;
    }
    .scoreboard-block {
        background-color: transparent;
        margin: 0px;
        padding: 0px;
        border-width: 0px;
    }
    .top-span {
        margin: 0px;
        padding: 0px;
    }
    .scoreboard-table {
        background-color: var(--middle-third-color);
        display: flex;
        padding: 5px 0px;
        border-width: 0px;
        border-radius: 0px 0px 10px 10px;
    }

    .select-scoreboard-filter {
        background-color: var(--middle-third-color);
        border-style: none;
        border-width: 0px;
        border-radius: 0px;
    
        padding: 5px 0px 5px 0px;
        margin: 0px;
    }

    #scoreboard {
        border-width: 0px 0px 3px 0px;
        border-radius: 0px;
        padding: 4px 0px 4px 0px;
    }

    #scoreboard-filters {
        border-width: 0px 0px 3px 0px;
        border-radius: 0px;
        padding: 4px 0px 4px 0px;
    }

    .main-game-top-bar {
        border-radius: 0px;
        border-width: 3px 0px 3px 0px;
    }
    .main-game-section {
        background-image: none;
        background-color: var(--middle-third-color);
        border-radius: 0px;
        border-width: 0px 0px 3px 0px;
        width: auto;
        max-width: max-content;
    }
    .config-block {
        background-color: transparent;
        margin: 0px;
    }
}

